[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Clouds/Clouds.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/World/Sky.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Aircraft/Aircraft.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Menu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://themes/MenuTheme.tres" type="Theme" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Wobble"
length = 3.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Aircraft:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 160, -0.25, 0, 0.5, 0, 120, -0.5, 0, 0.5, 0.528, 160, -0.5, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Graphics" type="Node2D" parent="."]

[node name="Sky" parent="Graphics" instance=ExtResource( 2 )]

[node name="Aircraft" parent="Graphics" instance=ExtResource( 3 )]
position = Vector2( 120, 144.187 )

[node name="Clouds" parent="Graphics" instance=ExtResource( 1 )]
margin_left = -129.632
margin_top = 0.0
margin_right = 1082.37
margin_bottom = 542.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
anims/Wobble = SubResource( 1 )

[node name="Controls" type="VBoxContainer" parent="."]
margin_left = 68.6913
margin_top = 347.769
margin_right = 408.691
margin_bottom = 463.769
theme = ExtResource( 5 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="Controls"]
margin_right = 340.0
margin_bottom = 48.0
text = "New Game"

[node name="QuitButton" type="Button" parent="Controls"]
margin_top = 68.0
margin_right = 340.0
margin_bottom = 116.0
text = "Exit"
[connection signal="pressed" from="Controls/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Controls/QuitButton" to="." method="_on_QuitButton_pressed"]
